--- a/public/dev.html
+++ b/public/dev.html
@@ -199,49 +199,52 @@
           <div class="container content_price__container">
             <div class="row">
               <div class="col-xl-6 offset-xl-2 text-center margin-bottom">
-                <div class="heading heading_small">Комплексная разработка сайта</div>
+                <div class="heading heading_small">Для тех, у кого уже есть дизайн</div>
                 <div class="offer">Мы пропагандируем индивидуальный расчет стоимости каждого проекта, но знаем вы хотите видеть хотя бы примерные цены поэтому немного цифр</div>
               </div>
             </div>
             <div class="row align-items-center justify-content-center">
-              <div class="col-xl-3 col-lg-3 p-relative"><img class="element element_1" src="../images/comment/dev_comment_0.png"/>
+              <div class="col-xl-3 col-lg-3 p-relative">
                 <div class="price">
-                  <div class="price__header">Лендинг</div>
+                  <div class="price__header">Верстка</div>
                   <div class="price__content">
-                    <p class="text-uppercase text-bold">В разработку входит</p>
-                    <p>
-                      прототипирование страницы, индивидуальный дизайн, разработка УТП, анализ конкурентов, продающие тексты и&nbsp;верстка страницы</p>
-                    <p>Что-то еще тут написать для баланса</p>
+                    <p class="text-uppercase text-bold">Минимальные техтребования</p>
+                    <p>— Стандарты HTML5 (проходит валидацию), CSS3 </p>
+                    <p>— Flexbox / Grid / Float</p>
+                    <p>— Отзывчивая (адаптивная) верстка</p>
+                    <p>— Соответствие верстки утвержденным дизайн-макетам</p>
                   </div>
-                  <div class="price__time">от 7 дней</div>
-                  <div class="price__footer">стоимость 13к+(за 3-4 экрана)</div>
+                  <div class="price__time">от 1 дня</div>
+                  <div class="price__footer">стоимость после ТЗ</div>
                 </div>
               </div>
-              <div class="col-xl-3 col-lg-4 p-relative"><img class="element element_2" src="../images/comment/dev_comment_2.png"/>
+              <div class="col-xl-3 col-lg-4 p-relative">
                 <div class="price price_large">
-                  <div class="price__header">Сайт-визитка</div>
+                  <div class="price__header">Верстка + CMS</div>
                   <div class="price__content">
                     <p class="text-uppercase text-bold">В разработку входит</p>
                     <p>
-                      прототипирование страницы, индивидуальный дизайн, разработка УТП, анализ конкурентов, продающие тексты и&nbsp;верстка страницы</p>
-                    <p>Что-то еще тут написать для баланса</p>
+                      Базовая настройка системы управления и&nbsp;верстка страниц, полностью соответствующая макетам. Как результат - сайт готовый к работе, дальнейшей оптимизации и 
+                      запуску рекламной кампании в Яндекс и Google.
+                    </p>
                   </div>
-                  <div class="price__time">от 10 дней</div>
+                  <div class="price__time">от 5 дней</div>
                   <div class="price__info">контент предоставляется заказчиком</div>
-                  <div class="price__footer">стоимость 45к+</div>
+                  <div class="price__footer">стоимость 8к+</div>
                 </div>
               </div>
-              <div class="col-xl-3 col-lg-3 p-relative"><img class="element element_3" src="../images/comment/dev_comment_1.png"/>
+              <div class="col-xl-3 col-lg-3 p-relative">
                 <div class="price">
-                  <div class="price__header">Магазин</div>
+                  <div class="price__header">CMS</div>
                   <div class="price__content">
-                    <p class="text-uppercase text-bold">В разработку входит</p>
-                    <p>
-                      прототипирование страницы, индивидуальный дизайн, разработка УТП, анализ конкурентов, продающие тексты и&nbsp;верстка страницы</p>
-                    <p>Что-то еще тут написать для баланса</p>
+                    <p class="text-uppercase text-bold">Базовая настройка включает</p>
+                    <p>— один пользователь-администратор</p>
+                    <p>— плагины для обновления и бекапов шаблонов страниц</p>
+                    <p>— минификация css и js файлов</p>
+                    <p>— плагины для транслитерации, отправки форм, SEO-продвижения</p>
                   </div>
-                  <div class="price__time">от 20 дней</div>
-                  <div class="price__footer">стоимость 66к+</div>
+                  <div class="price__time">от 4 дней</div>
+                  <div class="price__footer">стоимость 5к+</div>
                 </div>
               </div>
             </div>
