--- a/public/marketing.html
+++ b/public/marketing.html
@@ -7,7 +7,8 @@
     <title>SOHO студия</title>
     <link href="./css/jquery.fancybox.min.css" rel="stylesheet"/>
     <link href="./css/jquery.jscrollpane.css" rel="stylesheet"/>
-    <link href="./css/style.css" rel="stylesheet"/>
+    <link href="./css/framework.css" rel="stylesheet"/>
+    <link href="./css/marketing.css" rel="stylesheet"/>
   </head>
   <body class="marketing">
     <script src="./js/jquery.min.js"></script>
