--- a/public/blog_inside.html
+++ b/public/blog_inside.html
@@ -98,7 +98,7 @@
         </div>
         <section class="container post__container">
           <div class="row justify-content-center">
-            <div class="col-sm-10 col-xl-8">
+            <div class="col-md-10 col-xl-7">
               <div class="page__image" style="background-image:url('../images/image_blog.png');"></div>
               <div class="page__info">
                 <div class="page__breadcrumb breadcrumb">
@@ -111,14 +111,44 @@
               <div class="page__content">
                 <h1 class="heading">6 способов прокачать первый экран на вашем сайте</h1>
                 <p>Тот контент, который вы разместите на «первом экране», является ключом к успеху сайта. Дизайн может заманить, заставить юзера нажимать (на нужные кнопки) или перемещаться по странице. Что должен увидеть пользователь на экране, прежде чем захочет пролистать страницу?</p>
-                <blockquote>Первое, на что обращает внимание посетитель сайта — первый экран. Это — визитная карточка всего сайта. Остальной контент пользователь увидит потом, поэтому важно заинтересовать его с первых секунд. В данной статье предлагаем вам простые способы сделать дизайн главной страницы и особенно первого экрана качественным и информативным.</blockquote><img class="img-fluid img-border" src="../images/test-02.jpg" alt="" title=""/>
+                <blockquote>Первое, на что обращает внимание посетитель сайта — первый экран. Это — визитная карточка всего сайта. Остальной контент пользователь увидит потом, поэтому важно заинтересовать его с первых секунд. </blockquote>
+                <p>В данной статье предлагаем вам простые способы сделать дизайн главной страницы и особенно первого экрана качественным и информативным.</p>
+                <p><img class="img-fluid img-border" src="../images/test-02.jpg" alt="" title=""/></p>
+                <p class="text-center text-small text-grey">Я тут не сразу заметила сердечко – а в нем, надо полагать, весь цимес</p>
                 <h2>Заголовок h2</h2>
-                <p>Тот контент, который вы разместите на «первом экране», является ключом к успеху сайта. Дизайн может заманить, заставить юзера нажимать (на нужные кнопки) или перемещаться по странице. Что должен увидеть пользователь на экране, прежде чем захочет пролистать страницу?</p>
+                <p class="info">Вспомним строгий парижский логотип – он ведь совсем не для туристов. С кораблем и темным синим цветом себя ассоциируют только сами французы. Для праздно любопытствующих приезжих есть отдельная айдентика, попсовая.</p>
+                <p>Дизайн может заманить, заставить юзера нажимать (на нужные кнопки) или перемещаться по странице. Что должен увидеть пользователь на экране, прежде чем захочет пролистать страницу?</p>
+                <ul> 
+                  <li>контент, который вы разместите на «первом экране». Дизайн может заманить, заставить юзера нажимать (на нужные кнопки) или перемещаться по странице. </li>
+                  <li>контент, который вы разместите на «первом экране». </li>
+                  <li>контент, который вы разместите на «первом экране». </li>
+                </ul>
+                <p class="text-small">
+                  Дизайн может заманить, заставить юзера нажимать (на нужные кнопки) или перемещаться по странице. </p>
                 <h3>Заголовок h3</h3>
                 <p>Тот контент, который вы разместите на «первом экране», является ключом к успеху сайта. Дизайн может заманить, заставить юзера нажимать (на нужные кнопки) или перемещаться по странице. Что должен увидеть пользователь на экране, прежде чем захочет пролистать страницу?</p>
+                <ol> 
+                  <li>контент, который вы разместите на «первом экране». </li>
+                  <li>контент, который вы разместите на «первом экране». </li>
+                  <li>контент, который вы разместите на «первом экране». </li>
+                </ol>
                 <h4>Заголовок h4</h4>
                 <p>Тот контент, который вы разместите на «первом экране», является ключом к успеху сайта. Дизайн может заманить, заставить юзера нажимать (на нужные кнопки) или перемещаться по странице. Что должен увидеть пользователь на экране, прежде чем захочет пролистать страницу?</p>
+                <blockquote>
+                  Тот контент, который вы разместите на «первом экране», является ключом к успеху сайта. Дизайн может заманить, заставить юзера нажимать (на нужные кнопки) 
+                  или перемещаться по странице. Что должен увидеть пользователь на экране?
+                </blockquote>
                 <h5>Заголовок h5</h5>
+                <ul class="info info_yandex"> 
+                  <li>Конверсия в заявку: 3,2 %</li>
+                  <li>Количество заявок: 35</li>
+                  <li>Стоимость одной заявки: 850 рублей</li>
+                </ul>
+                <ul class="info info_google"> 
+                  <li>Конверсия в заявку: 3,2 %</li>
+                  <li>Количество заявок: 35</li>
+                  <li>Стоимость одной заявки: 850 рублей</li>
+                </ul>
                 <p>Тот контент, который вы разместите на «первом экране», является ключом к успеху сайта. Дизайн может заманить, заставить юзера нажимать (на нужные кнопки) или перемещаться по странице. Что должен увидеть пользователь на экране, прежде чем захочет пролистать страницу?</p>
               </div>
             </div>
