--- a/public/tilda.html
+++ b/public/tilda.html
@@ -11,55 +11,66 @@
   <body>
     <script src="http://code.jquery.com/jquery-3.3.1.min.js"></script>
     <main class="container">
-      <section class="container__inner content-main">
-        <div class="row align-items-center">
-          <div class="col-7">
-            <h1 class="content-main__title"><span class="text-green">Got</span>овый сайт на <span class="text-green">Tilda </span>за&nbsp;3&nbsp;дня и&nbsp;15к+</h1>
-            <p class="content-main__intro">Спроектируем сайт, напишем тексты, разработаем дизайн и запустим проект. От 3 дней и 15 000 рублей. Получите консультацию и расчет стоимости за Ваш сайт.</p>
-            <div class="content-main__action"><a class="btn" data-fancybox="data-fancybox" data-src="order" href="javascript;">Заполнить бриф</a><svg class="content-main__action-main" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 595 400" xml:space="preserve">
+      <section class="container__inner">
+        <div class="content-main">
+          <div class="row align-items-center">
+            <div class="col-7">
+              <h1 class="content-main__title"><span class="text-green">Got</span>овый сайт на <span class="text-green">Tilda </span>за&nbsp;3&nbsp;дня и&nbsp;15к+</h1>
+              <p class="content-main__intro">Спроектируем сайт, напишем тексты, разработаем дизайн и запустим проект. От 3 дней и 15 000 рублей. Получите консультацию и расчет стоимости за Ваш сайт.</p>
+              <div class="content-main__action"><a class="btn" data-fancybox="data-fancybox" data-src="order" href="javascript;">Заполнить бриф</a><svg class="content-main__action-main" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 595 400" xml:space="preserve">
 <path fill="none" stroke="#C1EA1D" stroke-width="5" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" d="M26,327.4c0,0,65.5,45.8,131.1,41.4c88-5.9,126.3-128.5,190.1-149.5c64.6-21.3,193.3,27.3,229.8-15.2c36.8-42.9-20.9-109.8-17.4-160.3c2.3-33.2,27.6-40.3,27.6-40.3"/>
 <path fill="#C1EA1D" d="M3.9,310.2l2,5l2.6-2.6l4.4,3.5L16,302l-16,6.7L3.9,310.2z M11.5,306l-4.9,4.5L6,312.8L4.8,310L11.5,306z"/>
 </svg>
+              </div>
+            </div>
+            <div class="col-5">
+              <div class="content-main__image"><img class="content-main__prototype" src="../demo/prototype.png" alt="" title=""/><img class="content-main__example" src="../demo/example.png" alt="" title=""/></div>
             </div>
           </div>
-          <div class="col-5">
-            <div class="content-main__image"><img class="content-main__prototype" src="../demo/prototype.png" alt="" title=""/><img class="content-main__example" src="../demo/example.png" alt="" title=""/></div>
+          <div class="row pt-4">
+            <div class="col-4">
+              <h2 class="h3">Всё, что нужно для&nbsp;<span class="text-green">online </span>продаж</h2>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-4">
+              <p class="content-main__intro">Платформа Tilda позволяет реализовать любой дизайн в 2-3 раза быстрее, чем при разработке с нуля. Кроме того в Тильде интегрировано множество популярных решений, которые легко можно подключить к сайту.</p>
+            </div>
+            <div class="col-8">
+              <div class="row">
+                <div class="col-6 item mb-3">
+                  <div class="item__title item__title_has-icon"> <img class="item__icon item__icon_inside-title" src="../icon/suspicious.svg" alt="" title=""/>Анализ задачи</div>
+                  <div class="item__intro">Заполняем подробный бриф и на него основе составляем КП. Если всё в порядке, подписываем договор и выставляем счёт на 50% стоимости проекта.</div>
+                </div>
+                <div class="col-6 item mb-3">
+                  <div class="item__title item__title_has-icon"> <img class="item__icon item__icon_inside-title" src="../icon/suspicious.svg" alt="" title=""/>Дизайн концепт</div>
+                  <div class="item__intro">Заполняем подробный бриф и на него основе составляем КП. Если всё в порядке, подписываем договор и выставляем счёт на 50% стоимости проекта.</div>
+                </div>
+                <div class="col-6 item mb-3">
+                  <div class="item__title item__title_has-icon"><img class="item__icon item__icon_inside-title" src="../icon/suspicious.svg" alt="" title=""/>Сборка на Tilda</div>
+                  <div class="item__intro">Заполняем подробный бриф и на него основе составляем КП. Если всё в порядке, подписываем договор и выставляем счёт на 50% стоимости проекта.</div>
+                </div>
+                <div class="col-6 item mb-3">
+                  <div class="item__title item__title_has-icon"> <img class="item__icon item__icon_inside-title" src="../icon/suspicious.svg" alt="" title=""/>Рекламный кабинет</div>
+                  <div class="item__intro">Заполняем подробный бриф и на него основе составляем КП. Если всё в порядке, подписываем договор и выставляем счёт на 50% стоимости проекта.</div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
-        <div class="row pt-3">
-          <div class="col-4">
-            <h2 class="h3">Всё, что нужно для&nbsp;<span class="text-green">online </span>продаж</h2>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-4">
-            <p class="content-main__intro">Платформа Tilda позволяет реализовать любой дизайн в 2-3 раза быстрее, чем при разработке с нуля. Кроме того в Тильде интегрировано множество популярных решений, которые легко можно подключить к сайту.</p>
-          </div>
-          <div class="col-8">
-            <div class="row">
-              <div class="col-6 item mb-3">
-                <div class="item__title item__title_adv">Анализ задачи
-                  <div class="item__icon"></div>
+        <div class="content-compare">
+          <div class="row justify-content-between">
+            <div class="col-3">
+              <div class="content-compare__image" style="background-image: url('../demo/img.png');"></div>
+            </div>
+            <div class="col-8">
+              <div class="row">
+                <div class="col-6">
+                  <h3>Tilda — идеальное решение?</h3>
                 </div>
-                <div class="item__intro">Заполняем подробный бриф и на него основе составляем КП. Если всё в порядке, подписываем договор и выставляем счёт на 50% стоимости проекта.</div>
-              </div>
-              <div class="col-6 item mb-3">
-                <div class="item__title item__title_adv">Дизайн концепт
-                  <div class="item__icon"></div>
+                <div class="col-6">
+                  <p>Честно обо всех <span class="text-bold text-green">«за» и «против» </span>разработки сайта на Тильда. Нам важно, чтобы вы имели представление обо всех нюансах работы.</p>
                 </div>
-                <div class="item__intro">Заполняем подробный бриф и на него основе составляем КП. Если всё в порядке, подписываем договор и выставляем счёт на 50% стоимости проекта.</div>
-              </div>
-              <div class="col-6 item mb-3">
-                <div class="item__title item__title_adv">Сборка на Tilda
-                  <div class="item__icon"></div>
-                </div>
-                <div class="item__intro">Заполняем подробный бриф и на него основе составляем КП. Если всё в порядке, подписываем договор и выставляем счёт на 50% стоимости проекта.</div>
-              </div>
-              <div class="col-6 item mb-3">
-                <div class="item__title item__title_adv">Рекламный кабинет
-                  <div class="item__icon"></div>
-                </div>
-                <div class="item__intro">Заполняем подробный бриф и на него основе составляем КП. Если всё в порядке, подписываем договор и выставляем счёт на 50% стоимости проекта.</div>
               </div>
             </div>
           </div>
