--- a/public/tilda.html
+++ b/public/tilda.html
@@ -48,15 +48,15 @@
           <div class="row align-items-center">
             <div class="col-7">
               <h1 class="content-main__title"><span class="text-green">Got</span>овый сайт на <span class="text-green">Tilda </span>за&nbsp;3&nbsp;дня и&nbsp;15к+</h1>
-              <p class="content-main__intro">Спроектируем сайт, напишем тексты, разработаем дизайн и запустим проект. От 3 дней и 15 000 рублей. Получите консультацию и расчет стоимости за Ваш сайт.</p>
-              <div class="content-main__action"><a class="btn" data-fancybox="data-fancybox" data-src="#hidden-form" href="javascript:;">Заполнить бриф</a><svg class="content-main__action-main" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 595 400" xml:space="preserve">
+              <p class="content-main__intro">Акционная стоимость действует  <span class="text-green text-bold">до 1 января 2021</span>. Оставьте заявку сегодня и цена для вас будет <span class="text-green text-bold">зафиксирована навсегда.</span></p>
+              <div class="content-main__action"><a class="btn btn_secondary" data-fancybox="data-fancybox" data-src="#hidden-form" href="javascript:;">Зафиксировать стоимость</a><svg class="content-main__action-main" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 595 400" xml:space="preserve">
 <path fill="none" stroke="#C1EA1D" stroke-width="5" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" d="M26,327.4c0,0,65.5,45.8,131.1,41.4c88-5.9,126.3-128.5,190.1-149.5c64.6-21.3,193.3,27.3,229.8-15.2c36.8-42.9-20.9-109.8-17.4-160.3c2.3-33.2,27.6-40.3,27.6-40.3"/>
-<path fill="#C1EA1D" d="M3.9,310.2l2,5l2.6-2.6l4.4,3.5L16,302l-16,6.7L3.9,310.2z M11.5,306l-4.9,4.5L6,312.8L4.8,310L11.5,306z"/>
+<!-- <path fill="#C1EA1D" d="M3.9,310.2l2,5l2.6-2.6l4.4,3.5L16,302l-16,6.7L3.9,310.2z M11.5,306l-4.9,4.5L6,312.8L4.8,310L11.5,306z"/> -->
 </svg>
               </div>
             </div>
             <div class="col-5">
-              <div class="content-main__image"><img class="content-main__prototype" src="../demo/prototype.png" alt="" title=""/><img class="content-main__example" src="../demo/example.png" alt="" title=""/></div>
+              <div class="content-main__image"><img class="content-main__sale" src="../demo/sale.png" alt="" title=""/><img class="content-main__prototype" src="../demo/prototype.png" alt="" title=""/><img class="content-main__example" src="../demo/first-screen.png" alt="" title=""/></div>
             </div>
           </div>
           <div class="row pt-5 pb-3">
@@ -181,33 +181,33 @@
             </div>
           </div>
         </div>
-        <div class="row pb-2">
-          <div class="col-4">
+        <div class="row pb-3">
+          <div class="col-4 col-xs-12">
             <h2 class="h1"><span class="text-green">Когда </span>стоит выбрать Tilda?</h2>
           </div>
         </div>
         <div class="row pb-4">
-          <div class="col-4 mb-2">
+          <div class="col-4 mb-2 col-xs-12">
             <div class="item">
-              <p class="item__subtitle">Сайт-визитка <br/>или корпоративный сайт</p>
-              <p class="item__intro">Нужен простой, удобный, но полноценный адаптивный сайт с современным дизайном. Важна возможность красиво подавать контент.</p><img class="img-fluid item__preview" src="../demo/example.png"/>
+              <p class="item__subtitle">Разработка <br/>промо-страницы</p>
+              <p class="item__intro">Нужен простой, удобный, но полноценный адаптивный сайт с современным дизайном. Важна возможность красиво подавать контент.</p><img class="img-fluid item__preview" src="../demo/promo-page.jpg"/>
             </div>
           </div>
-          <div class="col-4 mb-2">
+          <div class="col-4 mb-2 col-xs-12">
             <div class="item">
               <p class="item__subtitle">Сайт-визитка <br/>или корпоративный сайт</p>
-              <p class="item__intro">Нужен простой, удобный, но полноценный адаптивный сайт с современным дизайном. Важна возможность красиво подавать контент.</p><img class="img-fluid item__preview" src="../demo/example.png"/>
+              <p class="item__intro">Нужен простой, удобный, но полноценный адаптивный сайт с современным дизайном. Важна возможность красиво подавать контент.</p><img class="img-fluid item__preview" src="../demo/corp-page.jpg"/>
             </div>
           </div>
-          <div class="col-4 mb-2">
+          <div class="col-4 mb-2 col-xs-12">
             <div class="item">
-              <p class="item__subtitle">Сайт-визитка <br/>или корпоративный сайт</p>
-              <p class="item__intro">Нужен простой, удобный, но полноценный адаптивный сайт с современным дизайном. Важна возможность красиво подавать контент.</p><img class="img-fluid item__preview" src="../demo/example.png"/>
+              <p class="item__subtitle">Небольшой <br/>магазин или каталог</p>
+              <p class="item__intro">Нужен простой, удобный, но полноценный адаптивный сайт с современным дизайном. Важна возможность красиво подавать контент.</p><img class="img-fluid item__preview" src="../demo/store-page.jpg"/>
             </div>
           </div>
         </div>
         <div class="row pt-2 pb-2">
-          <div class="col-4 text-grey">
+          <div class="col-4 text-grey col-xs-12">
             <h4 class="text-white mb-3">Сделаем всё  <span class="d-block">качественно и&nbsp;в&nbsp;срок<span class="text-green">.</span></span></h4>
             <div class="content-intro">
               <p>1. Заключаем официальный договор. Указываем сроки, перечень услуг и стоимость. Подписываем договор в двух экземплярах. </p>
@@ -215,7 +215,7 @@
               <p>3. Сроки прописываем в приложении к договору.</p>
             </div>
           </div>
-          <div class="col-8">
+          <div class="col-8 col-xs-12">
             <div class="item item_price item_price-promo mb-2" data-fancybox="promo" data-src="#promo">
               <div class="item_price__content">
                 <p class="item_price__title">Promo</p>
@@ -257,7 +257,7 @@
       </section>
       <aside class="container__inner content-form">
         <div class="row">
-          <div class="col-8">
+          <div class="col-8 col-xs-12">
             <h4 class="h3"><span class="text-green">Pro</span>консультируем бесплатно. <span class="d-block">И честно<span class="text-green">.</span></span></h4>
             <p class="content-form__intro">Многие компании, предлагая свои услуги, говорят о том, какие они классные. Мы в первую очередь думаем о вас и вашем комфорте от сотрудничества с SOHO. Поэтому мы расскажем о том, что вы получите, обратившись к нам.</p>
             <form class="form content-form__form">
@@ -288,7 +288,7 @@
               </div>
             </form>
           </div>
-          <div class="col-4"><svg class="content-form__animation" id="parent" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 500 500" style="enable-background:new 0 0 500 500;" xml:space="preserve">
+          <div class="col-4 d-sm-none"><svg class="content-form__animation" id="parent" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 500 500" style="enable-background:new 0 0 500 500;" xml:space="preserve">
 <path id="path" fill="none" stroke="#3e3e3e" stroke-width="2" stroke-dasharray="10" d="M 25, 250 a 225,225 0 1,0 450,0 a 225,225 0 1,0 -450,0"/>
 <circle id="elem" cx="0" cy="0" r="14" fill="#3e3e3e"/>
 <animateMotion xlink:href="#elem" dur="6s" begin="0s" fill="freeze" restart="whenNotActive" repeatCount="indefinite">
@@ -332,7 +332,7 @@
     <footer class="container">
       <div class="footer container__inner">
         <div class="row">
-          <div class="col-4"><a href="https://websoho.ru/" alt="" title="">
+          <div class="col-4 col-xs-12"><a href="https://websoho.ru/" alt="" title="">
               <svg class="footer__logo" viewBox="0 0 320 80" preserveAspectRatio="xMidYMin meet" x="0px" y="0px">
                 <path class="footer__logo__path" d="M121.6,1.6C102,1.6,86.2,17.5,86.2,37s15.9,35.4,35.4,35.4S157,56.6,157,37v0C157,17.5,141.2,1.6,121.6,1.6z M121.6,46.9   c-5.4,0-9.8-4.4-9.8-9.8s4.4-9.8,9.8-9.8c5.4,0,9.8,4.4,9.8,9.8C131.4,42.5,127,46.9,121.6,46.9C121.6,46.9,121.6,46.9,121.6,46.9   L121.6,46.9z"></path>
                 <path class="footer__logo__path" d="M270.1,1.6c-19.6,0-35.4,15.9-35.4,35.4c0,19.6,15.9,35.4,35.4,35.4c19.6,0,35.4-15.9,35.4-35.4v0   C305.5,17.5,289.6,1.6,270.1,1.6z M270.1,46.9c-5.4,0-9.8-4.4-9.8-9.8s4.4-9.8,9.8-9.8s9.8,4.4,9.8,9.8l0,0   C279.9,42.5,275.5,46.9,270.1,46.9C270.1,46.9,270.1,46.9,270.1,46.9L270.1,46.9z"></path>
@@ -350,17 +350,17 @@
             <div class="footer__offer">Веб-разработка, реклама, продвижение.</div><a class="footer__email" href="mailto:work@websoho.ru">work@websoho.ru</a>
             <div class="footer__copyright">2018-2020 © websoho.ru. Все права защищены. <a class="text-underline" href="#">Оферта.</a></div>
           </div>
-          <div class="col-4">
+          <div class="col-4 col-xs-12">
             <p class="footer__title">Основные услуги</p>
             <div class="row">
-              <div class="col-6"><a class="footer__link" href="#">Сайт под ключ</a><a class="footer__link" href="#">Верстка и разработка</a><a class="footer__link" href="#">Графический дизайн</a><a class="footer__link" href="tilda.html">Сайт на Tilda</a></div>
-              <div class="col-6"><a class="footer__link" href="#">Интернет-маркетинг</a><a class="footer__link" href="#">Контекстная реклама</a><a class="footer__link" href="#">SEO-продвижение</a></div>
+              <div class="col-6 col-xs-12"><a class="footer__link" href="#">Сайт под ключ</a><a class="footer__link" href="#">Верстка и разработка</a><a class="footer__link" href="#">Графический дизайн</a><a class="footer__link" href="tilda.html">Сайт на Tilda</a></div>
+              <div class="col-6 col-xs-12"><a class="footer__link" href="#">Интернет-маркетинг</a><a class="footer__link" href="#">Контекстная реклама</a><a class="footer__link" href="#">SEO-продвижение</a></div>
             </div>
           </div>
-          <div class="col-2">
+          <div class="col-2 col-xs-12">
             <p class="footer__title">Блог</p><a class="footer__link" href="#">Фриланс = акуна матата?</a><a class="footer__link" href="#">Пересядь с иглы плохой рекламы</a><a class="footer__link" href="#">Играл со шрифтом в дизайне: проиграл</a>
           </div>
-          <div class="col-2">
+          <div class="col-2 col-xs-12">
             <p class="footer__title">Портфолио</p><a class="footer__link" href="#">Сайт для «ДИФ Строй-Инжиниринг»</a><a class="footer__link" href="#">Вывод сайта в ТОП-10 по высокочастотным запросам</a><a class="footer__link" href="#">Сайт для TopStone</a>
           </div>
         </div>
@@ -369,6 +369,7 @@
     <div class="overlay overlay--disable"></div>
     <div class="modal modal_form" id="hidden-form">
       <p class="h4 modal_form__title"> <span class="text-green">Brief </span>на разработку сайта</p>
+      <p>Заполните бриф сейчас и стоимость сохраниться за вами даже после окончания акционного предложения.</p>
       <form class="form">
         <p class="text-small text-bold">Контактные данные</p>
         <div class="form__group row">
@@ -392,30 +393,30 @@
         <div class="form__group row">
           <div class="col-6">
             <div class="checkbox mb-1">
-              <input class="checkbox__input" id="emailType" type="checkbox" name="emailType"/>
-              <label class="checkbox__label" for="emailType">Написать на e-mail</label>
+              <input class="checkbox__input" id="emailTypeBrief" type="checkbox" name="emailType"/>
+              <label class="checkbox__label" for="emailTypeBrief">Написать на e-mail</label>
             </div>
             <div class="checkbox">
-              <input class="checkbox__input" id="phoneType" type="checkbox" name="phoneType"/>
-              <label class="checkbox__label" for="phoneType">Перезвонить</label>
+              <input class="checkbox__input" id="phoneTypeBrief" type="checkbox" name="phoneType"/>
+              <label class="checkbox__label" for="phoneTypeBrief">Перезвонить</label>
             </div>
           </div>
           <div class="col-6">
             <div class="checkbox mb-1">
-              <input class="checkbox__input" id="messType1" type="checkbox" name="messType1"/>
-              <label class="checkbox__label" for="messType">Telegram</label>
+              <input class="checkbox__input" id="messTypeBrief1" type="checkbox" name="messType1"/>
+              <label class="checkbox__label" for="messType1Brief">Telegram</label>
             </div>
             <div class="checkbox">
-              <input class="checkbox__input" id="messType2" type="checkbox" name="messType2"/>
-              <label class="checkbox__label" for="messType2">WhatsApp</label>
+              <input class="checkbox__input" id="messType2Brief" type="checkbox" name="messType2"/>
+              <label class="checkbox__label" for="messType2Brief">WhatsApp</label>
             </div>
           </div>
         </div>
         <div class="form__group mt-3">
           <button class="btn btn_action" type="submit">Обсудить проект</button>
           <div class="mt-2 form__agree checkbox">
-            <input class="checkbox__input" id="agreeInline" type="checkbox" name="agreeInline" checked="checked" required="required"/>
-            <label class="checkbox__label" for="agreeInline">согласен с обработкой <a class="form__link-inverse" href="/policy.pdf" target="_blank">персональных данных</a></label>
+            <input class="checkbox__input" id="agreeInlineBrief" type="checkbox" name="agreeInline" checked="checked" required="required"/>
+            <label class="checkbox__label" for="agreeInlineBrief">согласен с обработкой <a class="form__link-inverse" href="/policy.pdf" target="_blank">персональных данных</a></label>
           </div>
         </div>
       </form>
