--- a/public/tilda.html
+++ b/public/tilda.html
@@ -216,6 +216,7 @@
         </div>
         <div class="modal modal_portfolio" id="portfolio-promo"><img class="img-fluid" src="../demo/presentation-personal.jpg"/><img class="img-fluid" src="../demo/demo-personal.jpg"/></div>
         <div class="modal modal_portfolio" id="portfolio-guest"><img class="img-fluid" src="../demo/presentation-guest.jpg"/><img class="img-fluid" src="../demo/demo-guest.jpg"/></div>
+        <div class="modal modal_portfolio" id="portfolio-store"><img class="img-fluid" src="../demo/presentation-store.jpg"/></div>
         <div class="row pt-2 pb-2">
           <div class="col-4 col-lg-8 col-md-10 col-sm-12 mb-lg-3 text-grey">
             <h4 class="text-white mb-3 mb-lg-2">Сделаем всё  <span class="d-block">качественно и&nbsp;в&nbsp;срок<span class="text-green">.</span></span></h4>
